Fix some style stuff and add dark mode

--- a/rohansatapathy_com/static/styles.css
+++ b/rohansatapathy_com/static/styles.css
@@ -5,7 +5,7 @@ body {
 
 :is(p, ul, ol) {
   line-height: 200%;
-  color: rgb(69, 69, 69);
+  color: var(--bs-body-color);
 }
 
 :is(h1, h2, h3, h4, h5, h6), .nav-item, .navbar-brand {
@@ -33,8 +33,8 @@ blockquote {
   padding-top: 1rem;
   padding-bottom: 1rem;
   margin-bottom: 1rem;
-  background-color: rgb(248, 248, 248);
-  border-left: 4px solid rgb(222, 226, 230);
+  background-color: var(--bs-tertiary-bg);
+  border-left: 4px solid var(--bs-secondary-bg);
   border-radius: 0.3rem;
   font-style: italic;
 }
@@ -45,11 +45,22 @@ blockquote p {
 
 pre {
   margin-bottom: 0;
+  overflow-y: hidden;
 }
 
 code {
   font-family: "Fira Code", monospace;
   font-size: 15px;
+  vertical-align: top;
+}
+
+.highlight {
+  background-color: var(--bs-body-bg);
+}
+
+/* Override Pygments dark colors */
+.o, .bp, .ow, .nb {
+  color: var(--bs-secondary-color) !important;
 }
 
 .p {
@@ -58,7 +69,7 @@ code {
 
 [data-linenos]:before {
   content: attr(data-linenos);
-  color: hsl(208, 7%, 60%) !important
+  color: var(--bs-tertiary-color) !important;
 }
 
 img {
@@ -79,3 +90,42 @@ img {
   padding-top: 0.2rem;
   font-style: italic;
 }
+
+.navbar {
+  background-color: var(--bs-tertiary-bg);
+}
+
+.navbar-brand {
+  font-weight: 500;
+}
+
+.post-title {
+  background-color: var(--bs-tertiary-bg);
+}
+
+#theme-button {
+  background: none;
+  border: none;
+  margin: 0;
+  padding: 0;
+  vertical-align: top;
+}
+
+#light-icon, #dark-icon, #auto-icon {
+  display: none;
+  width: 90%;
+  height: 90%;
+}
+
+[data-theme="light"] #light-icon {
+  display: inline;
+}
+
+[data-theme="dark"] #dark-icon {
+  display: inline;
+}
+
+[data-theme="auto"] #auto-icon {
+  display: inline;
+}
+
